feat: new dataset

--- a/doc/rte_api.ipynb
+++ b/doc/rte_api.ipynb
@@ -61,6 +61,27 @@
   {
    "cell_type": "markdown",
    "source": [
+    "# Test on ODRÉ `eco2mix-regional-tr` & `eco2mix-national-tr` dataset\n",
+    "\n",
+    "-> \"regional\": [link to dataset](https://odre.opendatasoft.com/explore/dataset/eco2mix-regional-tr)\n",
+    "-> \"national\": [link to dataset](https://odre.opendatasoft.com/explore/dataset/eco2mix-national-tr)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Test on Data RTE France\n",
     "\n",
     "Real time data\n",
