feat: get data from ODRÉ and insert it in influxdb

--- a/doc/rte_odre_api.ipynb
+++ b/doc/rte_odre_api.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -71,7 +71,6 @@
     "base_api = 'https://odre.opendatasoft.com/api/v2'\n",
     "dataset_id = 'consommation-quotidienne-brute'\n",
     "\n",
-    "\n",
     "fields = [ # limit to these fields\n",
     "    'date_heure', # or 'date' & 'heure'\n",
     "    'consommation_brute_electricite_rte'\n",
@@ -79,7 +78,7 @@
     "limit = 5 # last 5 measurements from the api\n",
     "\n",
     "params = {\n",
-    "    'select': \",\".join(fields),\n",
+    "    'select': ','.join(fields),\n",
     "    'limit': limit,\n",
     "    'order_by': 'date_heure desc',\n",
     "    'where': 'consommation_brute_electricite_rte is not null',\n",
@@ -146,44 +145,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Last 2th measurements:\n",
-      "total_count: 25996\n",
+      "total_count: 26116\n",
       "--------------------------------------------------\n",
-      "\tid: 639bc87bcad51cc8711e6dba1428696df52f66f6\n",
-      "\tdate: 2023-02-26T17:45:00+00:00\n",
+      "\tid: 77ebd4c14737e50ad94642b70e58590a8af2a328\n",
+      "\tdate: 2023-02-27T23:45:00+00:00\n",
       "\tperimeter: France\n",
       "\tnature: Données temps réel\n",
-      "\tconsumption: 62447 MW\n",
-      "\t\tnuclear: 38463 MW\n",
-      "\t\tcoal: 53 MW\n",
-      "\t\tsolar: 194 MW\n",
-      "\t\tfuel oil: 234 MW\n",
-      "\t\tbioenergies: 810 MW\n",
-      "\t\thydro: 6221 MW\n",
-      "\t\tgas: 7316 MW\n",
-      "\t\twind: 13157 MW\n",
-      "\tco2 rate: 57 gCO2eq/KWh\n",
+      "\tconsumption: 62832 MW\n",
+      "\t\tnuclear: 39336 MW\n",
+      "\t\tcoal: 306 MW\n",
+      "\t\tsolar: 0 MW\n",
+      "\t\tfuel oil: 246 MW\n",
+      "\t\tbioenergies: 861 MW\n",
+      "\t\thydro: 2529 MW\n",
+      "\t\tgas: 8172 MW\n",
+      "\t\twind: 7462 MW\n",
+      "\tco2 rate: 76 gCO2eq/KWh\n",
       "--------------------------------------------------\n",
-      "\tid: b5cf685d2d96285874c0ed56497b69c2112fda19\n",
-      "\tdate: 2023-02-26T17:30:00+00:00\n",
+      "\tid: 816aaee917179ac9c97827f41362de66019503f5\n",
+      "\tdate: 2023-02-27T23:30:00+00:00\n",
       "\tperimeter: France\n",
       "\tnature: Données temps réel\n",
-      "\tconsumption: 59762 MW\n",
-      "\t\tnuclear: 38356 MW\n",
-      "\t\tcoal: 54 MW\n",
-      "\t\tsolar: 242 MW\n",
-      "\t\tfuel oil: 235 MW\n",
-      "\t\tbioenergies: 811 MW\n",
-      "\t\thydro: 4473 MW\n",
-      "\t\tgas: 7149 MW\n",
-      "\t\twind: 13267 MW\n",
-      "\tco2 rate: 58 gCO2eq/KWh\n"
+      "\tconsumption: 64097 MW\n",
+      "\t\tnuclear: 39307 MW\n",
+      "\t\tcoal: 309 MW\n",
+      "\t\tsolar: 0 MW\n",
+      "\t\tfuel oil: 245 MW\n",
+      "\t\tbioenergies: 838 MW\n",
+      "\t\thydro: 2595 MW\n",
+      "\t\tgas: 8243 MW\n",
+      "\t\twind: 7613 MW\n",
+      "\tco2 rate: 76 gCO2eq/KWh\n"
      ]
     }
    ],
@@ -191,6 +190,7 @@
     "import requests\n",
     "# from datetime import timezone, datetime\n",
     "\n",
+    "base_api = 'https://odre.opendatasoft.com/api/v2'\n",
     "dataset_id = 'eco2mix-national-tr'\n",
     "\n",
     "fields = [\n",
@@ -201,7 +201,7 @@
     "    'nucleaire', 'charbon', 'solaire', 'fioul', 'bioenergies', 'hydraulique', 'gaz', 'eolien',\n",
     "    'taux_co2',\n",
     "]\n",
-    "limit = 2 # last 2 measurements from the api\n",
+    "limit = 2  # last 2 measurements from the api\n",
     "\n",
     "params = {\n",
     "    'select': ','.join(fields),\n",
